--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "restful_express_router",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "This is a simple function which takes a config object along with a mongoose model and return an express-router with a restful api ",
   "main": "index.js",
   "scripts": {
     "dev": "nodemon ./index.js",
+    "test": "jest",
     "tailwind": "npx tailwindcss -i ./public/css/input.css -o ./public/css/main.css --watch"
   },
   "author": "Bilal Tariq",
@@ -23,7 +24,9 @@
   },
   "devDependencies": {
     "@types/node": "^18.11.18",
+    "jest": "^29.7.0",
     "json-pretty": "^0.0.1",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "supertest": "^7.0.0"
   }
 }
